Add real Discogs workbook regression fixture